--- a/css/estilos.css
+++ b/css/estilos.css
@@ -91,7 +91,7 @@ p{
 }
   
 
-  /* nosotros...................................................................................*/
+/* nosotros...................................................................................*/
 
 .grid__texto1{
   font-size: 2rem;
@@ -250,7 +250,6 @@ margin-left: 30%;
     background-repeat: no-repeat;
   }
   
-  
 .grid__once{
     grid-area: seis;
     background-image: url("../recursos/Edificio 6.jpg");
@@ -310,9 +309,10 @@ margin-left:18% ;
   }
 
 .contacto__imagenes__uno{
-  margin-left: 15rem;
+  margin-left: 10rem;
   margin-top: 2rem;
-  ;
+  width:60rem; 
+  height:40rem;
   }
  
 .contacto__texto{
@@ -330,11 +330,11 @@ margin-left:18% ;
   flex-wrap: wrap; /*responsive*/
   font-size: 1.5rem; 
   padding: 1rem;
-  margin-left:20% ;
+  margin-left:30% ;
   margin-top: 0.25rem;
    }
 
-   .contacto__imput{
+.contacto__imput{
     margin:1rem ;
    }
 
@@ -363,6 +363,8 @@ margin-left:18% ;
   font-style: italic;
   }
 
+/*............................................................................................*/  
+
 @media (min-width:541px) and (max-width:720px){
   body {                                                                         
     background-color: rgba(99, 61, 36, 0.795);
@@ -374,6 +376,7 @@ margin-left:18% ;
     justify-content: center;
     align-items: center; 
     }
+
   .header__logo{
     width: 30vw;
     height: 7vh; 
@@ -437,7 +440,6 @@ margin-left:18% ;
 
   .grid__container__1nosotros{
     display:grid;
-        /*border: 0.1rem solid violet;*/
     grid-template-columns:50% 50%;
     grid-template-rows: 6rem 6rem 6rem 16rem;
     gap: 0.25rem;
@@ -457,11 +459,11 @@ margin-left:18% ;
 /* galeria...........................................................................................*/
 
 .portada__textoGaleria{
-    font-size:1.5rem;
-    margin-left: 0.1rem;
+    font-size:0.2rem;
+    margin-left: 0.01rem;
           }
 
-  .grid__container__2galeria{
+  .grid__container__1galeria{
     display:grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 15rem 15rem 15rem 15rem;
@@ -477,24 +479,31 @@ margin-left:18% ;
          }  
 /*actitud..............................................................................*/
 
+  .portada__textoActitud{
+  margin-left: 1rem;
+        }
   .texto__actitud{
      font-size: 2rem;
         }
   .ul___actitud{
      font-size:1.75rem ;
         }
-    
-
+ 
   /*contacto.......................................................................................*/  
 
+  .imput{
+    margin-left:10% ;
+    margin-top: 0.25rem;
+   }
+
   .contacto__imagenes__uno{
-     width: 40vw;
-     height: 15vh;
-     margin-left: 10rem;
+     width: 60vw;
+     height: 30vh;
+     margin-left: 7rem;
      margin-top: 2rem;
         }
   }
- 
+/*.................................................................................*/ 
   
 @media (min-width:320px) and (max-width:540px){  
     
@@ -533,18 +542,6 @@ margin-left:18% ;
 
 /*index................................................................................*/
 
-  .grid__conteiner__4index{
-        display:grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 20rem;
-        grid-template-areas:"uno" 
-                             "dos" 
-     
-       
-  
-         
-        }
-
   .portada__textoIndex{
     text-align: center;
     padding: 1rem; 
@@ -555,9 +552,10 @@ margin-left:18% ;
        }  
 
   .portada__btn{
-    margin-left: 1rem;
-    font-size: 1.25rem;
-    padding: 1rem;
+    margin-top: 0.25rem;
+    margin-left: 1%;
+    font-size: 0.5rem;
+    padding: 0.25rem;
       }   
 /*footer............................................................................*/
 
@@ -595,13 +593,14 @@ margin-left:18% ;
     font-size:1rem;
          }  
        
-  .grid__container__3nosotros{
+  .grid__container__2nosotros{
     display: flex;
     align-items: center;
     justify-content: center;
     align-content: center;
     background-position: center;
-    margin-left: 2rem;
+    margin-top: 2rem;
+    margin-left: 1rem;
     margin-right: 2rem;
     font-size: 1rem;
         }
@@ -616,11 +615,11 @@ margin-left:18% ;
 /*galeria...................................................................................*/      
 
   .portada__textoGaleria{
-    font-size:1.2rem;
-    margin-left: 0.10rem;
+    font-size:0.5rem;
+    margin-left: 0.010rem;
           }
 
-  .grid__container__2galeria{
+  .grid__container__1galeria{
     display:grid;
     grid-template-columns: 1fr;
     grid-template-rows: 15rem 15rem 15rem 15rem 15rem 15rem 15rem;
@@ -636,31 +635,28 @@ margin-left:18% ;
     gap: 0.5rem;
     margin-left: 3rem;
     margin-right: 2rem;
-         }      
+         }  
+
 /*actitud*.......................................................................*/       
-
-  .grid__conteiner__5actitud{
-          display:grid;
-          grid-template-columns: 1fr;
-          grid-template-rows: 15rem;
-          grid-template-areas:"uno"
-                              "dos" 
-      
-        
-   
-               
-             }
-
-   .texto__actitud{
+  .portada__textoActitud{
+    margin-left: 1rem;
+  }
+  .texto__actitud{
     font-size: 2rem;
         }
+
   .ul___actitud{
     font-size:1.75rem ;
     }
 /*contacto.......................................................................................*/
 
+  .imput{
+    margin-left:10% ;
+    margin-top: 0.25rem;
+   }
+
   .contacto__imagenes__uno{
-    width: 56vw;
+    width: 60vw;
     height: 15vh;
     margin-left: 6rem;
     margin-top: 2rem;
