--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -2,23 +2,69 @@
     display: flex;
     flex-direction: column; /* por defecto row (horizontal)*/
     flex-wrap: wrap; /* convierte en responsive*/
+
+    &__imagen{ 
+      display: flex;
+      flex-direction: row;
+      gap: 5rem;
+      border-radius: 1.5rem ;
+      margin-top: 0.5rem;
+      margin-bottom: 0.5rem;
+      margin-left: 7rem;
+        } 
+
+      /*.key1-contacto{
+         background-image: url('..recursos/contacto/contacto__1.jpg');
+         background-color: rgb(72, 73, 72);
+         width: 30rem;
+         height: 20rem;
+         border: 0.5rem solid #1a1d1b;
+         border-radius: 5rem;
+         padding:1rem;
+         }
+
+      .key2-contacto {
+         background-image: url('..recursos/contacto/contacto__2.jpg');
+         background-color: rgb(72, 73, 72);
+         width: 30rem;
+         height: 20rem;
+         border: 0.5rem solid #1a1d1b;
+         border-radius: 5rem;
+         padding:1rem;
+         } 
+           
+      .key3-contacto {
+          background-image: url('..recursos/contacto/contacto__5.jpg');
+          background-color: rgb(72, 73, 72);
+          width: 30rem;
+          height: 20rem;
+          border: 0.5rem solid #1a1d1b;
+          border-radius: 5rem;
+          padding:1rem;
+          }
+
+      .key4-contacto {
+          background-image: url('..recursos/contacto/contacto__46jpg');
+          background-color: rgb(72, 73, 72);
+          width: 30rem;
+          height: 20rem;
+          border: 0.5rem solid #1a1d1b;
+          border-radius: 5rem;
+          padding:1rem;
+          }*/
         
-    .contacto__texto{
+     &__texto{
         display:flex;
         font-size: 2rem;
         text-align: center;
         padding: 1rem;
+        margin-left: 10rem;
+        margin-right: 10rem;
         }
-    }
-
-  .contacto__imagenes__uno{
-      margin-left: 15rem;
-      margin-top: 2rem;
-      width:60rem; 
-      height:40rem;
       }
-  
-  .imput{
+
+      
+   .imput{
     display: flex;
     flex-direction: column; /* por defecto row (horizontal)*/
     flex-wrap: wrap; /*responsive*/
@@ -35,28 +81,134 @@
 
 @media (min-width:541px) and (max-width:720px){
 
-  .contacto__imagenes__uno{
-    width: 60vw;
-    height: 20vh;
-    margin-left: 5rem;
-    margin-top: 2rem;
-    }
+  .contacto {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+      }
+    &imagen {
+      width: 50vw;
+      height: 20vh;
+      border-radius: 1.5rem ;
+      margin-top: 0.5rem;
+      margin-bottom: 0.5rem;
+      margin-left: 7rem;
+      }
+
+    /*.key1-contacto {  
+      background-image: url("..recursos/contacto/contacto__1.jpg");
+      background-color: rgb(72, 73, 72);
+      width: 40vw;
+      height: 15vh;
+      border: 0.05rem solid #1a1d1b;
+      border-radius:1.5rem;
+      padding: 0.5rem;
+        }
+    .key2-contacto {
+      background-image: url("..recursos/contacto/contacto__2.jpg"); 
+      background-color: rgb(72, 73, 72);
+      width: 40vw;
+      height: 15vh;
+      border: 0.5rem solid #1a1d1b;
+      border-radius: 1.5rem;
+      padding: 0.5rem;
+       }
+    .key3-contacto {
+      background-image: url("..recursos/contacto/contacto__5.jpg"); 
+      background-color: rgb(72, 73, 72);
+      width: 40vw;
+      height: 15vh;
+      border: 0.5rem solid #1a1d1b;
+      border-radius: 1.5rem;
+      padding: 0.5rem;
+        }
+    .key4-contacto {
+      background-image: url("..recursos/contacto/contacto__6.jpg"); 
+      background-color: rgb(72, 73, 72);
+      width: 40vw;
+      height: 15vh;
+      border: 0.5rem solid #1a1d1b;
+      border-radius: 1.5rem;
+      padding: 0.5rem;
+        }*/
+
+    .contacto__texto {
+      display: flex;
+      font-size: 0.50rem;
+      text-align: center;
+      padding: 1rem;
+      margin-left: 1rem;
+      margin-right: 1rem; }
+   }
 
   .imput{
     margin-left:10% ;
     margin-top: 0.25rem;
     }
-  }
+  
 
 @media (min-width:320px) and (max-width:540px){   
  
-  .contacto__imagenes__uno{
-    width: 60vw;
-    height: 20vh;
-    margin-left: 4rem;
+  .contacto{ 
+    width: 35vw;
+    height: 215vh;
     margin-top: 2rem;
       }
 
+      &__imagen {
+        width: 50vw;
+        height: 20vh;
+        border-radius: 1.5rem ;
+        margin-top: 0.5rem;
+        margin-bottom: 0.5rem;
+        margin-left: 6rem;
+        }
+  
+      /*.key1-contacto {  
+        background-image: url("..recursos/contacto/contacto__1.jpg");
+        background-color: rgb(72, 73, 72);
+        width: 40vw;
+        height: 15vh;
+        border: 0.05rem solid #1a1d1b;
+        border-radius:1.5rem;
+          }
+      .key2-contacto {
+        background-image: url("..recursos/contacto/contacto__2.jpg"); 
+        background-color: rgb(72, 73, 72);
+        width: 40vw;
+        height: 15vh;
+        border: 0.5rem solid #1a1d1b;
+        border-radius: 1.5rem;
+         }
+      .key3-contacto {
+        background-image: url("..recursos/contacto/contacto__5.jpg"); 
+        background-color: rgb(72, 73, 72);
+        width: 40vw;
+        height: 15vh;
+        border: 0.5rem solid #1a1d1b;
+        border-radius: 1.5rem;
+        padding:1rem;
+        }
+      .key4-contacto {
+        background-image: url("..recursos/contacto/contacto__6.jpg"); 
+        background-color: rgb(72, 73, 72);
+        width: 40vw;
+        height: 15vh;
+        border: 0.5rem solid #1a1d1b;
+        border-radius: 1.5rem;
+        padding:1rem;
+        }*/
+  
+      .contacto__texto {
+        display: flex;
+        font-size: 0.50rem;
+        text-align: center;
+        padding: 1rem;
+        margin-left: 1rem;
+        margin-right: 1rem; }
+   
   .imput{
     margin-left:10% ;
     margin-top: 0.25rem;
