--- a/scss/_galeria.scss
+++ b/scss/_galeria.scss
@@ -11,25 +11,25 @@
     grid-template-columns: 1fr, 1fr, 1fr;
     grid-template-rows: 15rem 15rem 15rem 15rem;
     grid-template-areas:"uno dos tres" 
-                          "uno cuatro cinco"
-                          "seis cuatro ocho"
-                          "seis cuatro ocho";
+                         "uno cuatro cinco"
+                         "seis cuatro ocho"
+                         "seis cuatro ocho";
     gap: 1rem;
     margin-left: 10rem;
     margin-right: 10rem;
 
   
-    .grid__seis{
+    .grid__seis {
         grid-area: uno;
-        background-image: url("../recursos/Edificio 3.jpg");
-         background-position: inherit;
-         background-size: cover;
+        background-image:url("../recursos/edificio__3.jpg") ;;
+        background-position: inherit;
+        background-size: cover;
         background-repeat: no-repeat;
         }
     
-    .grid__siete{
+    .grid__siete {
         grid-area: dos;
-        background-image: url("../recursos/Edificio 1.jpg");
+        background-image: url("../recursos/edificio__4.jpg");
         background-position: inherit;
         background-size: cover;
         background-repeat: no-repeat;
@@ -37,7 +37,7 @@
     
     .grid__ocho{
         grid-area: tres;
-        background-image: url("../recursos/Edificio 2.jpg");
+        background-image: url("../recursos/edificios__5.jpg");
         background-position: inherit;
         background-size: cover;
         background-repeat: no-repeat;
@@ -45,7 +45,7 @@
     
     .grid__nueve{
         grid-area: cuatro;
-        background-image: url("../recursos/Edificio 5.jpg");
+        background-image: url("../recursos/edificio__6.jpg");
         background-position: inherit;
         background-size: cover;
         background-repeat: no-repeat;
@@ -53,7 +53,7 @@
     
     .grid__diez{
         grid-area: cinco;
-        background-image: url("../recursos/Edificio 4.jpg");
+        background-image: url("../recursos/edificio__7.jpg");
         background-position: inherit;
         background-size: cover;
         background-repeat: no-repeat;
@@ -61,7 +61,7 @@
     
     .grid__once{
         grid-area: seis;
-        background-image: url("../recursos/Edificio 6.jpg");
+        background-image: url("../recursos/edificio__8.jpg");
         background-position: inherit;
         background-size: cover;
         background-repeat: no-repeat;
@@ -69,7 +69,7 @@
     
     .grid__doce{
         grid-area: seis;
-        background-image: url("../recursos/Edificio 7.jpg");
+        background-image: url("../recursos/edificio__9.jpg");
         background-position: inherit;
         background-size: cover;
         background-repeat: no-repeat;
@@ -77,7 +77,7 @@
     
     .grid__trece{
         grid-area: ocho;
-        background-image: url("../recursos/Edificio 8.jpg");
+        background-image: url("../recursos/edificio__10.jpg");
         background-position: inherit;
         background-size: cover;
         background-repeat: no-repeat;
