--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -9,3 +9,11 @@ $font-size-h1: 3rem;
 $font-size-navegador:2rem;
 $font-size-p:2.5rem;
 $font-size-link:2rem;
+$ancho:15rem;
+$alto:7.5rem;
+$imagenescontactos:(
+    key1:"url('../recursos/contacto/contacto__1.jpg')", 
+    key2:"url('../recursos/contacto/contacto__2.jpg')",
+    key3:"url('../recursos/contacto/contacto__3.jpg')",
+    key4:"url('../recursos/contacto/contacto__4.jpg')",
+);
