Se definio  y  aplicado a btn en el index. Se agregaron imagenes a la pagina contacto y se les aplico mixin. Se aplico SEO a todas las paginas

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,31 @@
+.key1-contacto {
+  background-image: url("..recursos/contacto/contacto__1.jpg");
+  width: 30rem;
+  height: 20rem;
+  border: 0.5rem;
+  border-radius: 5rem; }
+
+.key2-contacto {
+  background-image: url("..recursos/contacto/contacto__2.jpg");
+  width: 30rem;
+  height: 20rem;
+  border: 0.5rem;
+  border-radius: 5rem; }
+
+.key3-contacto {
+  background-image: url("..recursos/contacto/contacto__5.jpg");
+  width: 30rem;
+  height: 20rem;
+  border: 0.5rem;
+  border-radius: 5rem; }
+
+.key4-contacto {
+  background-image: url("..recursos/contacto/contacto__6.jpg");
+  width: 30rem;
+  height: 20rem;
+  border: 0.5rem;
+  border-radius: 5rem; }
+
 .header {
   display: flex;
   flex-wrap: wrap;
@@ -199,10 +227,7 @@
   display: grid;
   grid-template-columns: 1fr, 1fr, 1fr;
   grid-template-rows: 15rem 15rem 15rem 15rem;
-  grid-template-areas: "uno dos tres" 
- "uno cuatro cinco"
- "seis cuatro ocho"
- "seis cuatro ocho";
+  grid-template-areas: "uno dos tres"  "uno cuatro cinco" "seis cuatro ocho" "seis cuatro ocho";
   gap: 1rem;
   margin-left: 10rem;
   margin-right: 10rem; }
@@ -267,10 +292,7 @@
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 15rem 15rem 15rem 15rem;
     border: 0.1rem solid #0f010f;
-    grid-template-areas: "uno dos"
- "tres cuatro"
- "cinco seis"
- "ocho seis";
+    grid-template-areas: "uno dos" "tres cuatro" "cinco seis" "ocho seis";
     gap: 0.5rem;
     margin-left: 1rem;
     margin-right: 1rem; } }
@@ -286,13 +308,7 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 15rem 15rem 15rem 15rem 15rem 15rem 15rem;
-    grid-template-areas: "uno" 
- "dos"
- "tres"
- "cuatro"
- "cinco"
- "seis"
- "ocho";
+    grid-template-areas: "uno"  "dos" "tres" "cuatro" "cinco" "seis" "ocho";
     gap: 0.5rem;
     margin-left: 3rem;
     margin-right: 2rem; } }
@@ -335,212 +351,129 @@
 .contacto {
   display: flex;
   flex-direction: row;
-  /* por defecto row (horizontal)*/
-  flex-wrap: wrap;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-  /* convierte en responsive*/ }
-
+  padding: 2rem;
+  margin-left: 3rem; }
   .contacto__imagen {
+    gap: 5rem; }
+  .contacto .key1-contacto {
+    border: solid #272e29;
+    margin-left: 25rem; }
+  .contacto .key2-contacto {
+    border: solid #272e29;
+    margin-left: 25rem; }
+  .contacto .key3-contacto {
+    border: solid #272e29;
+    margin-left: 25rem; }
+  .contacto .key4-contacto {
+    border: solid  #272e29;
+    margin-left: 25rem; }
+  .contacto__texto {
     display: flex;
-    flex-direction: row;
-    gap: 5rem;
-    width: 35rem;
-    height: 25rem;
-    background-color: azure;
-    border-radius: 5rem;
-    padding: 2rem;
-    margin-left: 5.5rem;
-    }
-  
-    .key1-contacto {  
-      background-image: url("..recursos/contacto/contacto__1.jpg");
-      background-color: rgb(72, 73, 72);
-      width: 30rem;
-      height: 20rem;
-      border: 0.5rem solid #1a1d1b;
-      border-radius: 5rem;
-      padding:1rem;
-            }
-    .key2-contacto {
-      background-image: url("..recursos/contacto/contacto__2.jpg"); 
-      background-color: rgb(72, 73, 72);
-      width: 30rem;
-      height: 20rem;
-      border: 0.5rem solid #1a1d1b;
-      border-radius: 5rem;
-      padding:1rem;
-      }
-    .key3-contacto {
-      background-image: url("..recursos/contacto/contacto__5.jpg"); 
-      background-color: rgb(72, 73, 72);
-      width: 30rem;
-      height: 20rem;
-      border: 0.5rem solid #1a1d1b;
-      border-radius: 5rem;
-      padding:1rem;
-      }
-    .key4-contacto {
-      background-image: url("..recursos/contacto/contacto__6.jpg"); 
-      background-color: rgb(72, 73, 72);
-      width: 30rem;
-      height: 20rem;
-      border: 0.5rem solid #1a1d1b;
-      border-radius: 5rem;
-      padding:1rem;
-      }
-    
-    .contacto__texto {
-      display: flex;
-      font-size: 2rem;
-      text-align: center;
-      padding: 1rem;
-      margin-left: 10rem;
-      margin-right: 10rem; }
+    font-size: 2rem;
+    text-align: center;
+    padding: 1rem; }
 
 .imput {
   display: flex;
   flex-direction: column;
-  /* por defecto row (horizontal)*/
   flex-wrap: wrap;
-  /*responsive*/
   font-size: 1.5rem;
   padding: 1rem;
-  margin-left: 30%;
+  margin-left: 20rem;
+  margin-right: 10rem;
   margin-top: 0.25rem; }
   .imput .contacto__imput {
-    margin: 1rem;
+    padding: 0.50rem;
     color: white; }
 
 @media (min-width: 541px) and (max-width: 720px) {
-
   .contacto {
     display: flex;
     flex-wrap: wrap;
     margin-top: 1rem;
     margin-bottom: 1rem;
-    
-    }
-
-  .contacto__imagen {
-    width: 50vw;
-    height: 20vh;
-    border-radius: 1.5rem ;
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
-    margin-left: 7rem;
-    }
-
-    .key1-contacto {  
-      background-image: url("..recursos/contacto/contacto__1.jpg");
-      background-color: rgb(72, 73, 72);
-      width: 40vw;
-      height: 15vh;
-      border: 0.05rem solid #1a1d1b;
-      border-radius:1.5rem;
-        }
-    .key2-contacto {
-      background-image: url("..recursos/contacto/contacto__2.jpg"); 
-      background-color: rgb(72, 73, 72);
-      width: 40vw;
-      height: 15vh;
-      border: 0.5rem solid #1a1d1b;
+    margin-left: 0.05rem; }
+    .contacto__imagen {
+      flex-direction: row;
+      flex-wrap: wrap;
+      gap: 2rem;
+      align-content: center;
+      margin-left: 0.05rem; }
+    .contacto .key1-contacto {
+      width: 15rem;
+      height: 10rem;
+      border: solid #1a1d1b;
       border-radius: 1.5rem;
-       }
-    .key3-contacto {
-      background-image: url("..recursos/contacto/contacto__5.jpg"); 
-      background-color: rgb(72, 73, 72);
-      width: 40vw;
-      height: 15vh;
-      border: 0.5rem solid #1a1d1b;
+      margin-left: 0.05rem; }
+    .contacto .key2-contacto {
+      width: 15rem;
+      height: 10rem;
+      border: solid #1a1d1b;
       border-radius: 1.5rem;
-        }
-    .key4-contacto {
-      background-image: url("..recursos/contacto/contacto__6.jpg"); 
-      background-color: rgb(72, 73, 72);
-      width: 40vw;
-      height: 15vh;
-      border: 0.5rem solid #1a1d1b;
+      margin-left: 0.05rem; }
+    .contacto .key3-contacto {
+      width: 15rem;
+      height: 10rem;
+      border: solid #1a1d1b;
       border-radius: 1.5rem;
-        }
-
+      margin-left: 0.05rem; }
+    .contacto .key4-contacto {
+      width: 15rem;
+      height: 10rem;
+      border: solid #1a1d1b;
+      border-radius: 1.5rem;
+      margin-left: 0.05rem; }
     .contacto__texto {
       display: flex;
       font-size: 0.50rem;
       text-align: center;
       padding: 1rem;
-      margin-left: 1rem;
-      margin-right: 1rem; }
+      margin-left: 0.05rem;
+      margin-right: 1rem; } }
 
-  .imput {
-    margin-left: 10%;
-    margin-top: 0.25rem; } 
-  }
+.imput {
+  margin-left: 20%;
+  margin-top: 0.25rem; }
 
 @media (min-width: 320px) and (max-width: 540px) {
   .contacto {
     display: flex;
-    flex-direction: column;
     flex-wrap: wrap;
     margin-top: 1rem;
-    margin-bottom: 1rem;
-    
-    }
-
+    margin-top: 1rem;
+    margin-right: 2rem; }
     .contacto__imagen {
-      width: 50vw;
-      height: 20vh;
-      border-radius: 1.5rem ;
-      margin-top: 0.5rem;
-      margin-bottom: 0.5rem;
-      margin-left: 6rem;
-      }
-
-    .key1-contacto {  
-      background-image: url("..recursos/contacto/contacto__1.jpg");
-      background-color: rgb(72, 73, 72);
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      gap: 2rem; }
+    .contacto .key1-contacto {
       width: 40vw;
       height: 15vh;
       border: 0.05rem solid #1a1d1b;
-      border-radius:1.5rem;
-      padding: 0.5rem;
-        }
-    .key2-contacto {
-      background-image: url("..recursos/contacto/contacto__2.jpg"); 
-      background-color: rgb(72, 73, 72);
+      border-radius: 1.5rem; }
+    .contacto .key2-contacto {
       width: 40vw;
       height: 15vh;
       border: 0.5rem solid #1a1d1b;
-      border-radius: 1.5rem;
-      padding: 0.5rem;
-       }
-    .key3-contacto {
-      background-image: url("..recursos/contacto/contacto__5.jpg"); 
-      background-color: rgb(72, 73, 72);
+      border-radius: 1.5rem; }
+    .contacto .key3-contacto {
       width: 40vw;
       height: 15vh;
       border: 0.5rem solid #1a1d1b;
-      border-radius: 1.5rem;
-      padding:0.5rem;
-      }
-    .key4-contacto {
-      background-image: url("..recursos/contacto/contacto__6.jpg"); 
-      background-color: rgb(72, 73, 72);
+      border-radius: 1.5rem; }
+    .contacto .key4-contacto {
       width: 40vw;
       height: 15vh;
       border: 0.5rem solid #1a1d1b;
-      border-radius: 1.5rem;
-      padding:0.5rem;
-      }
-
-    .contacto__texto {
+      border-radius: 1.5rem; }
+    .contacto .contacto__texto {
       display: flex;
       font-size: 0.50rem;
       text-align: center;
       padding: 1rem;
       margin-left: 1rem;
       margin-right: 1rem; }
-
   .imput {
     margin-left: 10%;
     margin-top: 0.25rem; } }
