--- a/scss/_galeria.scss
+++ b/scss/_galeria.scss
@@ -37,7 +37,7 @@
     
     .grid__ocho{
         grid-area: tres;
-        background-image: url("../recursos/edificios__5.jpg");
+        background-image: url("../recursos/edificio__5.jpg");
         background-position: inherit;
         background-size: cover;
         background-repeat: no-repeat;
