--- a/scss/sasscript.scss
+++ b/scss/sasscript.scss
@@ -1,64 +1,3 @@
-/*$imagenescontacto:(
-    key1:contacto__1, 
-    key2:contacto__2,
-    key3:contacto__5,
-    key4:contacto__6,
-);
-
-@each $key, $imagen in $imagenescontacto{
- .#{$key}-contacto{ 
-  background-image: url('../recursos/contacto/#{$imagen}.jpg');
-    @include miximagen;
-       }
-
-$sizesview:(sm:576px, md:768px, lg:992px)
-@each $nome $sizeview in $sizesview {
-  .col-#{$name}{
-    width: $sizeview;
-  }
-}
- .col-sm {
-  width: 576px;
- }
- .col-md {
-  width: 768px;
- }
- .col-lg {
-  width: 992px;
- }
-
- .key1__contacto{
-  background-image: url('..recursos/contacto/contacto__1.jpg');
-  width: 30rem;
-  height: 20rem;
-  border:0.5rem solid rgb(26, 29, 27);
-  border-radius: 5rem;
-  }
-
-.key2__contacto {
-  background-image: url('..recursos/contacto/contacto__2.jpg');
-  @extend .key1__contacto;
- } 
-    
-.key3__contacto {
-   background-image: url('..recursos/contacto/contacto__3.jpg');
-   @extend .key1__contacto;
-  }
- .key4__contacto {
-   background-image: url('..recursos/contacto/contacto__4.jpg');
-   @extend .key1__contacto;
- }
-
-@mixin miximagen ($color,$size, $url)  { 
- background-image:$url;
- color:$color;
- font-family:tahoma;
- font-size: $size;
-}
-
-.contacto__imagenes{
- @include miximagen (rgb(214, 57, 133), 3rem, url('..recursos/contacto/contacto__5.jpg'))
-}*/
 
 $imagenescontacto:(
     key1:"contacto__1.jpg", 
@@ -67,10 +6,30 @@ $imagenescontacto:(
     key4:"contacto__6.jpg",
 );
 
-@each $key, $imagen in $imagenescontacto{
-  .#{$key}-contacto{ 
-   background-image: url('../recursos/contacto/#{$imagen}');
-   
-      }
-  }
- 
+
+@mixin atributos ($width:30rem, $height:20rem, $border:0.5rem, $border-radius:5rem) { 
+  width:$width;
+  height:$height;
+  border:$border;
+  border-radius:$border-radius;
+    }
+
+.key1-contacto{
+  background-image: url('..recursos/contacto/contacto__1.jpg');
+  @include atributos;
+   }
+.key2-contacto{
+  background-image: url('..recursos/contacto/contacto__2.jpg');
+  @include atributos;
+   } 
+.key3-contacto{
+  background-image: url('..recursos/contacto/contacto__5.jpg');
+  @include atributos;
+   }
+.key4-contacto{
+  background-image: url('..recursos/contacto/contacto__6.jpg');
+  @include atributos;
+   }
+
+
+
