Se aplico grids a la pagina contacto

--- a/scss/_nosotros.scss
+++ b/scss/_nosotros.scss
@@ -14,17 +14,16 @@
         background: #00000099;
         text-align: center;
         }
-   .grid__texto{
+    .grid__texto{
         font-size: 2rem;
         color: white;
         }
-   .grid__texto1{
+    .grid__texto1{
          font-size:1.5rem ;
          }   
    
    .grid__uno{
-      grid-row-start: 1;
-      grid-row-end: 3;
+      grid-row: 1/3;
       background-image: url("../recursos/Nosotros 1.jpg");
       background-position: inherit;
       background-size: cover;
