--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,30 +2,83 @@
   background-image: url("..recursos/contacto/contacto__1.jpg");
   width: 30rem;
   height: 20rem;
-  border: 0.5rem;
+  border: 1rem;
   border-radius: 5rem; }
 
 .key2-contacto {
   background-image: url("..recursos/contacto/contacto__2.jpg");
   width: 30rem;
   height: 20rem;
-  border: 0.5rem;
+  border: 1rem;
   border-radius: 5rem; }
 
 .key3-contacto {
   background-image: url("..recursos/contacto/contacto__5.jpg");
   width: 30rem;
   height: 20rem;
-  border: 0.5rem;
+  border: 1rem;
   border-radius: 5rem; }
 
 .key4-contacto {
   background-image: url("..recursos/contacto/contacto__6.jpg");
   width: 30rem;
   height: 20rem;
-  border: 0.5rem;
+  border: 1rem;
   border-radius: 5rem; }
 
+/*@media (min-width:541px) and (max-width:720px){
+    @mixin atributos ($width:15rem, $height:10rem, $border:1rem, $border-radius:2rem) { 
+      width:$width;
+      height:$height;
+      border:$border;
+      border-radius:$border-radius;
+        }
+    
+    .key1-contacto{
+      background-image: url('..recursos/contacto/contacto__1.jpg');
+      @include atributos;
+       }
+    .key2-contacto{
+      background-image: url('..recursos/contacto/contacto__2.jpg');
+      @include atributos;
+       } 
+    .key3-contacto{
+      background-image: url('..recursos/contacto/contacto__5.jpg');
+      @include atributos;
+       }
+    .key4-contacto{
+      background-image: url('..recursos/contacto/contacto__6.jpg');
+      @include atributos;
+       }
+    
+      }
+
+@media (min-width:320px) and (max-width:540px){
+  @mixin atributos ($width:15rem, $height:10rem, $border:1rem, $border-radius:1rem) { 
+          width:$width;
+          height:$height;
+          border:$border;
+          border-radius:$border-radius;
+            }
+        
+        .key1-contacto{
+          background-image: url('..recursos/contacto/contacto__1.jpg');
+          @include atributos;
+           }
+        .key2-contacto{
+          background-image: url('..recursos/contacto/contacto__2.jpg');
+          @include atributos;
+           } 
+        .key3-contacto{
+          background-image: url('..recursos/contacto/contacto__5.jpg');
+          @include atributos;
+           }
+        .key4-contacto{
+          background-image: url('..recursos/contacto/contacto__6.jpg');
+          @include atributos;
+           }
+        
+          }*/
 .header {
   display: flex;
   flex-wrap: wrap;
@@ -114,8 +167,7 @@
   .grid__container__1nosotros .grid__texto1 {
     font-size: 1.5rem; }
   .grid__container__1nosotros .grid__uno {
-    grid-row-start: 1;
-    grid-row-end: 3;
+    grid-row: 1/3;
     background-image: url("../recursos/Nosotros 1.jpg");
     background-position: inherit;
     background-size: cover;
@@ -348,38 +400,63 @@
     .portada__textoActitud .ul___actitud {
       font-size: 1.75rem; } }
 
-.contacto {
+.grid__container__1contacto {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 15rem 15rem;
+  gap: 8rem;
+  margin-left: 10rem;
+  margin-right: 10rem;
+  justify-content: center;
+  align-content: center;
+  background-position: center;
+  padding: 6rem; }
+  .grid__container__1contacto .grid__catorce {
+    grid-row: 1/2;
+    grid-column: 1/2;
+    background-image: url("../recursos/contacto/contacto__1.jpg");
+    background-position: inherit;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border: solid #272e29; }
+  .grid__container__1contacto .grid__quince {
+    grid-row: 1/2;
+    grid-column: 2/3;
+    background-image: url("../recursos/contacto/contacto__2.jpg");
+    background-position: inherit;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border: solid #272e29; }
+  .grid__container__1contacto .grid__dieciseis {
+    grid-row: 2/3;
+    grid-column: 1/2;
+    background-image: url("../recursos/contacto/contacto__5.jpg");
+    background-position: inherit;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border: solid #272e29; }
+  .grid__container__1contacto .grid__diecisiete {
+    grid-row: 2/3;
+    grid-column: 2/3;
+    background-image: url("../recursos/contacto/contacto__6.jpg");
+    background-position: inherit;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border: solid #272e29; }
+
+.contacto__texto {
   display: flex;
-  flex-direction: row;
-  padding: 2rem;
-  margin-left: 3rem; }
-  .contacto__imagen {
-    gap: 5rem; }
-  .contacto .key1-contacto {
-    border: solid #272e29;
-    margin-left: 25rem; }
-  .contacto .key2-contacto {
-    border: solid #272e29;
-    margin-left: 25rem; }
-  .contacto .key3-contacto {
-    border: solid #272e29;
-    margin-left: 25rem; }
-  .contacto .key4-contacto {
-    border: solid  #272e29;
-    margin-left: 25rem; }
-  .contacto__texto {
-    display: flex;
-    font-size: 2rem;
-    text-align: center;
-    padding: 1rem; }
+  font-size: 2rem;
+  text-align: center;
+  padding: 6rem; }
 
 .imput {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  font-size: 1.5rem;
+  font-size: 2rem;
   padding: 1rem;
-  margin-left: 20rem;
+  margin-left: 30rem;
   margin-right: 10rem;
   margin-top: 0.25rem; }
   .imput .contacto__imput {
@@ -387,96 +464,118 @@
     color: white; }
 
 @media (min-width: 541px) and (max-width: 720px) {
-  .contacto {
+  grid__container__1contacto {
     display: flex;
-    flex-wrap: wrap;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    margin-left: 0.05rem; }
-    .contacto__imagen {
-      flex-direction: row;
-      flex-wrap: wrap;
-      gap: 2rem;
-      align-content: center;
-      margin-left: 0.05rem; }
-    .contacto .key1-contacto {
-      width: 15rem;
-      height: 10rem;
-      border: solid #1a1d1b;
-      border-radius: 1.5rem;
-      margin-left: 0.05rem; }
-    .contacto .key2-contacto {
-      width: 15rem;
-      height: 10rem;
-      border: solid #1a1d1b;
-      border-radius: 1.5rem;
-      margin-left: 0.05rem; }
-    .contacto .key3-contacto {
-      width: 15rem;
-      height: 10rem;
-      border: solid #1a1d1b;
-      border-radius: 1.5rem;
-      margin-left: 0.05rem; }
-    .contacto .key4-contacto {
-      width: 15rem;
-      height: 10rem;
-      border: solid #1a1d1b;
-      border-radius: 1.5rem;
-      margin-left: 0.05rem; }
-    .contacto__texto {
-      display: flex;
-      font-size: 0.50rem;
-      text-align: center;
-      padding: 1rem;
-      margin-left: 0.05rem;
-      margin-right: 1rem; } }
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 15rem 15rem;
+    gap: 1rem;
+    margin-left: 1rem;
+    margin-right: 2rem;
+    justify-content: center;
+    align-content: center;
+    background-position: center;
+    padding: 1rem; }
+    grid__container__1contacto .grid__catorce {
+      grid-row: 1/2;
+      grid-column: 1/2;
+      background-image: url("../recursos/contacto/contacto__1.jpg");
+      background-position: inherit;
+      background-size: cover;
+      background-repeat: no-repeat;
+      border: solid #272e29; }
+    grid__container__1contacto .grid__quince {
+      grid-row: 1/2;
+      grid-column: 2/3;
+      background-image: url("../recursos/contacto/contacto__2.jpg");
+      background-position: inherit;
+      background-size: cover;
+      background-repeat: no-repeat;
+      border: solid #272e29; }
+    grid__container__1contacto .grid__dieciseis {
+      grid-row: 2/3;
+      grid-column: 1/2;
+      background-image: url("../recursos/contacto/contacto__5.jpg");
+      background-position: inherit;
+      background-size: cover;
+      background-repeat: no-repeat;
+      border: solid #272e29; }
+    grid__container__1contacto .grid__diecisiete {
+      grid-row: 2/3;
+      grid-column: 2/3;
+      background-image: url("../recursos/contacto/contacto__6.jpg");
+      background-position: inherit;
+      background-size: cover;
+      background-repeat: no-repeat;
+      border: solid #272e29; } }
+
+.contacto__texto {
+  display: flex;
+  font-size: 0.20rem;
+  text-align: center;
+  padding: 1rem;
+  margin-left: 0.1rem; }
 
 .imput {
   margin-left: 20%;
-  margin-top: 0.25rem; }
+  margin-top: 0.10rem; }
 
 @media (min-width: 320px) and (max-width: 540px) {
-  .contacto {
+  grid__container__1contacto {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 15rem 15rem;
+    gap: 0.5rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    justify-content: center;
+    align-content: center;
+    background-position: center;
+    padding: 1rem; }
+    grid__container__1contacto .grid__catorce {
+      grid-row: 1/2;
+      grid-column: 1/2;
+      background-image: url("../recursos/contacto/contacto__1.jpg");
+      background-position: inherit;
+      background-size: cover;
+      background-repeat: no-repeat;
+      border: solid #272e29; }
+    grid__container__1contacto .grid__quince {
+      grid-row: 1/2;
+      grid-column: 2/3;
+      background-image: url("../recursos/contacto/contacto__2.jpg");
+      background-position: inherit;
+      background-size: cover;
+      background-repeat: no-repeat;
+      border: solid #272e29; }
+    grid__container__1contacto .grid__dieciseis {
+      grid-row: 2/3;
+      grid-column: 1/2;
+      background-image: url("../recursos/contacto/contacto__5.jpg");
+      background-position: inherit;
+      background-size: cover;
+      background-repeat: no-repeat;
+      border: solid #272e29; }
+    grid__container__1contacto .grid__diecisiete {
+      grid-row: 2/3;
+      grid-column: 2/3;
+      background-image: url("../recursos/contacto/contacto__6.jpg");
+      background-position: inherit;
+      background-size: cover;
+      background-repeat: no-repeat;
+      border: solid #272e29; }
+  .contacto__texto {
     display: flex;
-    flex-wrap: wrap;
-    margin-top: 1rem;
-    margin-top: 1rem;
-    margin-right: 2rem; }
-    .contacto__imagen {
-      display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-      gap: 2rem; }
-    .contacto .key1-contacto {
-      width: 40vw;
-      height: 15vh;
-      border: 0.05rem solid #1a1d1b;
-      border-radius: 1.5rem; }
-    .contacto .key2-contacto {
-      width: 40vw;
-      height: 15vh;
-      border: 0.5rem solid #1a1d1b;
-      border-radius: 1.5rem; }
-    .contacto .key3-contacto {
-      width: 40vw;
-      height: 15vh;
-      border: 0.5rem solid #1a1d1b;
-      border-radius: 1.5rem; }
-    .contacto .key4-contacto {
-      width: 40vw;
-      height: 15vh;
-      border: 0.5rem solid #1a1d1b;
-      border-radius: 1.5rem; }
-    .contacto .contacto__texto {
-      display: flex;
-      font-size: 0.50rem;
-      text-align: center;
-      padding: 1rem;
-      margin-left: 1rem;
-      margin-right: 1rem; }
-  .imput {
-    margin-left: 10%;
-    margin-top: 0.25rem; } }
+    font-size: 0.50rem;
+    text-align: center;
+    padding: 1rem;
+    margin-left: 0.10rem;
+    margin-right: 0.10rem; } }
+
+.imput {
+  font-size: 1.5rem;
+  margin-left: 10%;
+  margin-top: 0.05rem; }
 
 * {
   margin: 0px;
