--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -1,47 +1,77 @@
-  .contacto{
-    display: flex;
-    flex-direction: row;
-    padding: 2rem;
-    margin-left: 3rem;
+  
+    .grid__container__1contacto{
+      display:grid;
+      grid-template-columns: 50% 50%;
+      grid-template-rows: 15rem 15rem;
+      gap: 8rem;
+      margin-left: 10rem;
+      margin-right: 10rem;
+      justify-content: center;
+      align-content: center;
+      background-position: center;
+      padding: 6rem;
+        
+     
+    .grid__catorce {
+      grid-row: 1/2;
+      grid-column:1/2;
+      background-image:url("../recursos/contacto/contacto__1.jpg") ;;
+      background-position: inherit;
+      background-size: cover;
+      background-repeat: no-repeat;
+      border:solid #272e29 ;
+       }
 
-    &__imagen{
-      gap:5rem;  }
+   .grid__quince  {
+    grid-row: 1/2;
+    grid-column: 2/3;
+      background-image:url("../recursos/contacto/contacto__2.jpg") ;;
+      background-position: inherit;
+      background-size: cover;
+      background-repeat: no-repeat;
+      border:solid #272e29 ;
+       }
+     
+    .grid__dieciseis {
+      grid-row: 2/3;
+      grid-column: 1/2;
+      background-image:url("../recursos/contacto/contacto__5.jpg") ;;
+      background-position: inherit;
+      background-size: cover;
+      background-repeat: no-repeat;  
+      border:solid #272e29 ;
+       }
 
-     .key1-contacto {
+    .grid__diecisiete  {
+      grid-row: 2/3;
+      grid-column: 2/3;
+       background-image:url("../recursos/contacto/contacto__6.jpg") ;;
+       background-position: inherit;
+       background-size: cover;
+       background-repeat: no-repeat; 
        border:solid #272e29 ;
-       margin-left: 25rem; }
-    
-     .key2-contacto {
-       border: solid #272e29;
-       margin-left: 25rem;}
-    
-     .key3-contacto {
-       border: solid #272e29;
-       margin-left: 25rem; }
-    
-     .key4-contacto {
-       border: solid  #272e29;
-       margin-left: 25rem; }
+         }
+       } 
+     
 
-             
-     &__texto{
+     .contacto__texto{
         display:flex;
         font-size: 2rem;
         text-align: center;
-        padding: 1rem;
+        padding: 6rem;
        
         }
-     }
-      
+     
+     
 
       
    .imput{
     display: flex;
     flex-direction: column; 
     flex-wrap: wrap; 
-    font-size: 1.5rem;  
+    font-size: 2rem;  
     padding: 1rem;
-    margin-left:20rem;
+    margin-left:30rem;
     margin-right: 10rem;
     margin-top: 0.25rem;
 
@@ -53,120 +83,150 @@
 
 @media (min-width:541px) and (max-width:720px){
 
-  .contacto {
+  grid__container__1contacto{
     display: flex;
-    flex-wrap: wrap;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    margin-left: 0.05rem;
+    display:grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 15rem 15rem;
+    gap: 1rem;
+    margin-left: 1rem;
+    margin-right: 2rem;
+    justify-content: center;
+    align-content: center;
+    background-position: center;
+    padding: 1rem;
+      
+   
+  .grid__catorce {
+    grid-row: 1/2;
+    grid-column:1/2;
+    background-image:url("../recursos/contacto/contacto__1.jpg") ;;
+    background-position: inherit;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border:solid #272e29 ;
+     }
 
-     &__imagen{
-       flex-direction: row; 
-      flex-wrap: wrap; 
-      gap:2rem;
-      align-content: center;
-      margin-left: 0.05rem;
-    }
-    .key1-contacto {  
-      width: 15rem;
-      height: 10rem;
-      border: solid #1a1d1b;
-      border-radius:1.5rem;
-      margin-left: 0.05rem ;
-         }
-    .key2-contacto {
-      width: 15rem;
-      height: 10rem;
-      border: solid #1a1d1b;
-      border-radius: 1.5rem;
-      margin-left: 0.05rem;
+ .grid__quince  {
+  grid-row: 1/2;
+  grid-column: 2/3;
+    background-image:url("../recursos/contacto/contacto__2.jpg") ;;
+    background-position: inherit;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border:solid #272e29 ;
+     }
+   
+  .grid__dieciseis {
+    grid-row: 2/3;
+    grid-column: 1/2;
+    background-image:url("../recursos/contacto/contacto__5.jpg") ;;
+    background-position: inherit;
+    background-size: cover;
+    background-repeat: no-repeat;  
+    border:solid #272e29 ;
+     }
+
+  .grid__diecisiete  {
+    grid-row: 2/3;
+    grid-column: 2/3;
+     background-image:url("../recursos/contacto/contacto__6.jpg") ;;
+     background-position: inherit;
+     background-size: cover;
+     background-repeat: no-repeat; 
+     border:solid #272e29 ;
        }
-    .key3-contacto {
-      width: 15rem;
-      height: 10rem;
-      border: solid #1a1d1b;
-      border-radius: 1.5rem;
-      margin-left: 0.05rem;
-        }
-    .key4-contacto {
-      width: 15rem;
-      height: 10rem;
-      border: solid #1a1d1b;
-      border-radius: 1.5rem;
-      margin-left: 0.05rem;
-        }
-
-     &__texto {
+     } 
+    }
+     .contacto__texto {
       display: flex;
-      font-size: 0.50rem;
+      font-size: 0.20rem;
       text-align: center;
       padding: 1rem;
-      margin-left: 0.05rem;
-      margin-right: 1rem; }
-   }
-   }
+      margin-left: 0.1rem;
+       }
+   
+   
   .imput{
     margin-left:20% ;
-    margin-top: 0.25rem;
+    margin-top: 0.10rem;
+    
     }
   
 
 @media (min-width:320px) and (max-width:540px){   
  
-  .contacto{ 
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 1rem;
-    margin-top: 1rem;
+  grid__container__1contacto{
+    display:grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 15rem 15rem;
+    gap: 0.5rem;
+    margin-left: 2rem;
     margin-right: 2rem;
+    justify-content: center;
+    align-content: center;
+    background-position: center;
+    padding: 1rem;
       
-      &__imagen{
-        display: flex;
-        flex-direction: row; 
-        flex-wrap: wrap; 
-        gap:2rem;
-      }  
-      .key1-contacto {  
-        width: 40vw;
-        height: 15vh;
-        border: 0.05rem solid #1a1d1b;
-        border-radius:1.5rem;
-          }
-      .key2-contacto {
-        width: 40vw;
-        height: 15vh;
-        border: 0.5rem solid #1a1d1b;
-        border-radius: 1.5rem;
-         }
-      .key3-contacto {
-        width: 40vw;
-        height: 15vh;
-        border: 0.5rem solid #1a1d1b;
-        border-radius: 1.5rem;
-         }
-      .key4-contacto {
-        width: 40vw;
-        height: 15vh;
-        border: 0.5rem solid #1a1d1b;
-        border-radius: 1.5rem;
-          }
+   
+  .grid__catorce {
+    grid-row: 1/2;
+    grid-column:1/2;
+    background-image:url("../recursos/contacto/contacto__1.jpg") ;;
+    background-position: inherit;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border:solid #272e29 ;
+     }
+
+ .grid__quince  {
+  grid-row: 1/2;
+  grid-column: 2/3;
+    background-image:url("../recursos/contacto/contacto__2.jpg") ;;
+    background-position: inherit;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border:solid #272e29 ;
+     }
+   
+  .grid__dieciseis {
+    grid-row: 2/3;
+    grid-column: 1/2;
+    background-image:url("../recursos/contacto/contacto__5.jpg") ;;
+    background-position: inherit;
+    background-size: cover;
+    background-repeat: no-repeat;  
+    border:solid #272e29 ;
+     }
+
+  .grid__diecisiete  {
+    grid-row: 2/3;
+    grid-column: 2/3;
+     background-image:url("../recursos/contacto/contacto__6.jpg") ;;
+     background-position: inherit;
+     background-size: cover;
+     background-repeat: no-repeat; 
+     border:solid #272e29 ;
+       }
+     } 
   
       .contacto__texto {
         display: flex;
         font-size: 0.50rem;
         text-align: center;
         padding: 1rem;
-        margin-left: 1rem;
-        margin-right: 1rem; }
+        margin-left: 0.10rem;
+        margin-right: 0.10rem; }
 
      }
    
   .imput{
+    font-size: 1.5rem;
     margin-left:10% ;
-    margin-top: 0.25rem;
+    margin-top: 0.05rem;
    }
 
-  }     
+    
     
    
      
