--- a/scss/sasscript.scss
+++ b/scss/sasscript.scss
@@ -7,7 +7,7 @@ $imagenescontacto:(
 );
 
 
-@mixin atributos ($width:30rem, $height:20rem, $border:0.5rem, $border-radius:5rem) { 
+@mixin atributos ($width:30rem, $height:20rem, $border:1rem, $border-radius:5rem) { 
   width:$width;
   height:$height;
   border:$border;
@@ -32,4 +32,57 @@ $imagenescontacto:(
    }
 
 
+ /*@media (min-width:541px) and (max-width:720px){
+    @mixin atributos ($width:15rem, $height:10rem, $border:1rem, $border-radius:2rem) { 
+      width:$width;
+      height:$height;
+      border:$border;
+      border-radius:$border-radius;
+        }
+    
+    .key1-contacto{
+      background-image: url('..recursos/contacto/contacto__1.jpg');
+      @include atributos;
+       }
+    .key2-contacto{
+      background-image: url('..recursos/contacto/contacto__2.jpg');
+      @include atributos;
+       } 
+    .key3-contacto{
+      background-image: url('..recursos/contacto/contacto__5.jpg');
+      @include atributos;
+       }
+    .key4-contacto{
+      background-image: url('..recursos/contacto/contacto__6.jpg');
+      @include atributos;
+       }
+    
+      }
 
+@media (min-width:320px) and (max-width:540px){
+  @mixin atributos ($width:15rem, $height:10rem, $border:1rem, $border-radius:1rem) { 
+          width:$width;
+          height:$height;
+          border:$border;
+          border-radius:$border-radius;
+            }
+        
+        .key1-contacto{
+          background-image: url('..recursos/contacto/contacto__1.jpg');
+          @include atributos;
+           }
+        .key2-contacto{
+          background-image: url('..recursos/contacto/contacto__2.jpg');
+          @include atributos;
+           } 
+        .key3-contacto{
+          background-image: url('..recursos/contacto/contacto__5.jpg');
+          @include atributos;
+           }
+        .key4-contacto{
+          background-image: url('..recursos/contacto/contacto__6.jpg');
+          @include atributos;
+           }
+        
+          }*/
+    
